syntax = "proto3";

package spine.sample.failures;

option java_package="io.spine.sample.failures";
option java_multiple_files = false;

// Normally we do not specify the `java_outer_classname` option because we are not generating
// multiple Java classes for failures.
// Buf if the option is set, it should be handled.
option java_outer_classname = "OuterClassForFailures";

option java_generate_equals_and_hash = true;

message Failure5Separate {
    string message = 1;
}

message Failure6Separate {
    bool visible = 1;
}
